# rust-tig

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: linux.yml  macos.yml
ai/: 2025-10-07-command-messageinit-is-analyzing-your-codebase.txt  ARCHITECTURE.md  CLAUDE.md  CLAUDE2.md  CONFIGURATION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  VIEWS_SPECIFICATION.md  diff-viewer.prd
examples/: README.md  config_demo.rs
src/: lib.rs  main.rs
src/config/: colors.rs  config.rs  mod.rs
src/git/: commit.rs  diff.rs  error.rs  mod.rs  repository.rs  status.rs  walker.rs
src/ui/: app.rs  event.rs  mod.rs  terminal.rs
src/views/: diff_view.rs  help_view.rs  main_view.rs  manager.rs  mod.rs  status_view.rs  view.rs
tests/: integration_tests.rs
